--- a/FGUITemplate/assets/CommonBase/package.xml
+++ b/FGUITemplate/assets/CommonBase/package.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <packageDescription id="jaoapdic" jpegQuality="80" compressPNG="true">
-  <resources>
-    <component id="nk8t0" name="Text.xml" path="/__style/"/>
-  </resources>
+  <resources/>
   <publish name=""/>
 </packageDescription>
